{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 21,
  "lineage": "34e4fcc1-e827-fd11-e03e-cd70366547d9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:330248160669:vpc/vpc-70ea531b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-10ab107b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a61f8ccd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-70ea531b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3e9ed855",
            "owner_id": "330248160669",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:330248160669:loadbalancer/app/terraform-up-and-running/885e116b9a5a0eec",
            "arn_suffix": "app/terraform-up-and-running/885e116b9a5a0eec",
            "dns_name": "terraform-up-and-running-327827863.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:330248160669:loadbalancer/app/terraform-up-and-running/885e116b9a5a0eec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-up-and-running",
            "security_groups": [
              "sg-074f2dad48fe410a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-75ac0d1e"
              },
              {
                "subnet_id": "subnet-e8d9c692"
              },
              {
                "subnet_id": "subnet-ede6a1a1"
              }
            ],
            "subnets": [
              "subnet-75ac0d1e",
              "subnet-e8d9c692",
              "subnet-ede6a1a1"
            ],
            "vpc_id": "vpc-70ea531b",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:330248160669:listener/app/terraform-up-and-running/885e116b9a5a0eec/fff3efa4b9d2e74d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:330248160669:listener/app/terraform-up-and-running/885e116b9a5a0eec/fff3efa4b9d2e74d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:330248160669:loadbalancer/app/terraform-up-and-running/885e116b9a5a0eec",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.example",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:330248160669:security-group/sg-074f2dad48fe410a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074f2dad48fe410a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-up-and-running",
            "name_prefix": null,
            "owner_id": "330248160669",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-70ea531b"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-396621659",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074f2dad48fe410a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-683791634",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-074f2dad48fe410a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}